styles: fix tiles width on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@ a {
 
 @layer components {
   .project {
-    @apply flex flex-col justify-between bg-indigo-600  hover:bg-pink-600 transition duration-300 ease-in-out rounded-md p-4 shadow-md w-80 h-44;
+    @apply flex flex-col justify-between bg-indigo-600  hover:bg-pink-600 transition duration-300 ease-in-out rounded-md p-4 shadow-md w-auto h-44;
   }
 }
 
